[package]
name = "p2p"
version = "0.1.0"
authors = ["Johann Og <kronolynx@gmail.com>"]

[dependencies]
tokio = "0.1.8"
serde = "1.0.79"
serde_json = "1.0.30"
serde_derive = "1.0.79"
rand = "0.5.5"
# A Rust library for option parsing for CLI utilities.
getopts = "0.2.18"
uuid = { version = "0.7.1", features = ["serde", "v4"] }
futures = "0.1.24"
bytes = "0.4.10"